src/objects/RT1__MeetingFieldMappings__c.object
<CustomObject>
    <fields>
        <fullName>RT1__ContactAllowUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Allow Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__ContactField__c</fullName>
        <label>Contact Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__LeadAllowUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Allow Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__LeadField__c</fullName>
        <label>Lead Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RT1__ReadytalkMeeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ReadyTalk Meeting</label>
        <referenceTo>RT1__ReadyTalkMeeting__c</referenceTo>
        <relationshipLabel>Meeting Field Mappings</relationshipLabel>
        <relationshipName>Meeting_Field_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT1__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RT1__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Meeting_Field_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Meeting Field Mapping</label>
    <nameField>
        <label>Meeting Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>